--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "src"
 version = "0.0.1"
 description = "Vehicle Insurance using MLOps practices"
-author = [{"name": "Ayush Dubey", "email": "aadubey1106@gmail.com"}]
+authors = [{"name"= "Ayush Dubey", "email"= "aadubey1106@gmail.com"}]
 
 [tool.setuptools]
 packages = {find = {}}
